[package]
name = "hls-fragment-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hls_m3u8 = "0.4.1"
globset = "0.4.9"
walkdir = "2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.66"

[profile.release]
lto = true
